--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tony Mayke | Portfólio</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tony Mayke | Psicologia & Fonoaudiologia</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="fade">
+  <header>
     <nav class="navbar">
-      <h1 class="logo">Tony Mayke</h1>
-      <ul class="nav-links">
+      <h1 class="logo">Tony<span>Mayke</span></h1>
+      <ul>
         <li><a href="#sobre">Sobre</a></li>
         <li><a href="#trajetoria">Trajetória</a></li>
         <li><a href="#objetivo">Objetivo</a></li>
@@ -19,61 +19,43 @@
     </nav>
 
     <div class="hero">
-      <div class="hero-text">
-        <h2>Psicologia & Fonoaudiologia</h2>
-        <p>Foco no atendimento infantil e no público TEA — Transtorno do Espectro Autista.</p>
-        <a href="#contato" class="btn">Entrar em Contato</a>
-      </div>
-      <div class="hero-img">
-        <img src="tony.jpg" alt="Foto de Tony Mayke" />
-      </div>
+      <img src="tony.jpg" alt="Foto de Tony Mayke" class="perfil">
+      <h2>Psicólogo em Formação | Terapeuta ABA</h2>
+      <p>Transformando vidas através da Análise do Comportamento</p>
+      <a href="#sobre" class="btn">Conheça minha jornada</a>
     </div>
   </header>
 
   <main>
     <section id="sobre" class="fade">
       <h2>Sobre Mim</h2>
-      <p>
-        Tenho 28 anos e estou no 9° período do curso de <strong>Psicologia</strong> e no 2° período de <strong>Fonoaudiologia</strong>.
-        Minha perspectiva teórica é baseada na <strong>Análise do Comportamento</strong>, com foco no atendimento infantil e no público
-        <strong>TEA (Transtorno do Espectro Autista)</strong>.
-      </p>
+      <p>Tenho 28 anos e estou no 9° período de <strong>Psicologia</strong> e no 2° período de <strong>Fonoaudiologia</strong>. 
+      Minha perspectiva teórica é focada na <strong>Análise do Comportamento</strong>, com foco no atendimento infantil, especialmente com o público <strong>TEA (Transtorno do Espectro Autista)</strong>.</p>
     </section>
 
     <section id="trajetoria" class="fade">
       <h2>Trajetória Profissional</h2>
-      <p>
-        Comecei como <strong>auxiliar de sala</strong> na rede municipal de ensino, acompanhando uma criança neurodivergente.
-        Após 2 anos, passei a estagiar na <strong>área clínica infantil</strong>, onde atuo como <strong>Terapeuta ABA (Análise do Comportamento Aplicado)</strong>.
-      </p>
+      <p>Iniciei minha carreira como auxiliar de sala na rede municipal, acompanhando uma criança neurodivergente. 
+      Após dois anos, comecei a atuar na área clínica infantil como <strong>Terapeuta ABA</strong> (Análise do Comportamento Aplicado), onde sigo até hoje.</p>
     </section>
 
     <section id="objetivo" class="fade">
       <h2>Objetivo Atual</h2>
-      <p>
-        Meu próximo passo é iniciar a <strong>pós-graduação em Análise do Comportamento</strong>, com foco no público TEA, aprimorando minhas práticas terapêuticas
-        e fortalecendo a inclusão infantil.
-      </p>
+      <p>Meu próximo passo é iniciar uma <strong>Pós-Graduação em Análise do Comportamento</strong> voltada ao público TEA, buscando ampliar meus conhecimentos e aprimorar minhas práticas terapêuticas.</p>
     </section>
 
-    <section id="contato" class="fade contato">
+    <section id="contato" class="fade">
       <h2>Contato</h2>
-      <p>Quer saber mais sobre meu trabalho?</p>
-      <button id="mostrarEmail" class="btn">Mostrar Contato</button>
+      <p>Quer conversar comigo ou saber mais sobre meu trabalho?</p>
+      <button id="mostrarEmail" class="btn">Mostrar E-mail</button>
       <p id="email" class="email">📧 tony.mayke@example.com</p>
-
-      <div class="socials">
-        <a href="#" target="_blank">🌐 Instagram</a>
-        <a href="#" target="_blank">💼 LinkedIn</a>
-      </div>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 Tony Mayke — Desenvolvido com dedicação.</p>
+    <p>© 2025 Tony Mayke • Desenvolvido com dedicação e propósito</p>
   </footer>
 
   <script src="script.js"></script>
 </body>
 </html>
-
