--- a/index.html
+++ b/index.html
@@ -1,211 +1,204 @@
 <!doctype html>
 <html lang="pt-BR">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Dr. Silas Santos — Advocacia</title>
-  <meta name="description" content="Dr. Silas Santos (OAB/AL 13253) — Especialista em Revisão de Contratos Bancários e Direito Penal. Mais de 800 processos conduzidos." />
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Dr. Silas Santos — Advocacia Premium</title>
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"/>
 
-  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
-  <!-- Topbar -->
-  <header class="topbar" role="banner">
-    <div class="wrap topbar-inner">
-      <div class="brand" aria-label="Marca">
-        <div class="logo-mark" aria-hidden="true">SS</div>
-        <div class="brand-text">
-          <div class="brand-name">Dr. Silas <span>Santos</span></div>
-          <div class="brand-sub">OAB/AL 13253</div>
-        </div>
+<header class="topbar">
+  <div class="wrap topbar-inner">
+    <div class="brand">
+      <div class="logo-mark">SS</div>
+      <div>
+        <div class="brand-name">Dr. Silas <span>Santos</span></div>
+        <div class="brand-sub">OAB/AL 13253</div>
       </div>
-
-      <nav id="mainNav" class="nav" role="navigation" aria-label="Menu principal">
-        <a href="#sobre">Sobre</a>
-        <a href="#areas">Áreas</a>
-        <a href="#resultados">Resultados</a>
-        <a href="#contato" class="nav-cta">Contato</a>
-      </nav>
-
-      <button id="menuToggle" class="menu-toggle" aria-expanded="false" aria-controls="mainNav" aria-label="Abrir menu">
-        ☰
-      </button>
     </div>
-  </header>
 
-  <!-- HERO -->
-  <main>
-    <section class="hero" id="home">
-      <div class="wrap hero-grid">
-        <div class="hero-left">
-          <h1>Protegendo seu patrimônio, sua liberdade e sua dignidade</h1>
-          <p class="lead">
-            Meu nome é <strong>Silas Santos</strong> (OAB/AL 13253). Formado pela Universidade Federal de Alagoas (UFAL),
-            atuo há mais de uma década garantindo que os direitos dos meus clientes sejam respeitados.
-          </p>
+    <nav id="mainNav" class="nav">
+      <a href="#sobre">Sobre</a>
+      <a href="#areas">Áreas</a>
+      <a href="#especial">Especializações</a>
+      <a href="#contato" class="nav-cta">Contato</a>
+    </nav>
 
-          <div class="ctas">
-            <a href="#contato" class="btn primary">Agende uma avaliação</a>
-            <a href="#areas" class="btn ghost">Ver áreas de atuação</a>
-          </div>
+    <button id="menuToggle" class="menu-toggle">☰</button>
+  </div>
+</header>
 
-          <ul class="highlights">
-            <li>📂 +800 processos conduzidos</li>
-            <li>🔎 Revisão de contratos bancários (financiamentos de veículos)</li>
-            <li>⚖️ Atuação completa em Direito Penal</li>
-          </ul>
-        </div>
+<!-- HERO SECTION -->
+<section class="hero">
+  <div class="wrap hero-grid">
 
-        <div class="hero-right">
-          <div class="portrait">
-            <img src="img/fotosilas1.png" alt="Silas Santos">
-            <div class="portrait-glow" aria-hidden="true"></div>
-          </div>
-        </div>
+    <div class="hero-left">
+      <h1>Compromisso, Justiça e Excelência na Defesa dos Seus Direitos.</h1>
+
+      <p class="lead">
+        Há mais de uma década, atuo com dedicação absoluta para proteger o patrimônio,
+        a liberdade e a dignidade dos meus clientes. São mais de
+        <strong>1.500 processos conduzidos</strong> ao longo da minha carreira
+        e uma carteira atual de aproximadamente <strong>1.200 processos ativos</strong>.
+      </p>
+
+      <div class="ctas">
+        <a href="#contato" class="btn primary">Agendar Avaliação</a>
+        <a href="#sobre" class="btn ghost">Saber Mais</a>
       </div>
-    </section>
 
-    <!-- SOBRE -->
-    <section id="sobre" class="section about">
-      <div class="wrap about-grid">
-        <div class="about-text glass">
-          <h2>Sobre</h2>
-          <p>
-            Meu nome é <strong>Silas Santos</strong> (OAB/AL 13253), e há mais de uma década eu me dedico à advocacia com o propósito de garantir que os direitos dos meus clientes sejam respeitados. Formado pela renomada <strong>Universidade Federal de Alagoas (UFAL)</strong>, construí uma carreira pautada na seriedade técnica e na atuação combativa.
-          </p>
-
-          <p>
-            Minha missão é analisar seu contrato minuciosamente para buscar redução real da dívida, devolução de valores pagos indevidamente e viabilizar a quitação do veículo por um valor justo, protegendo seu patrimônio.
-          </p>
-
-          <a href="#contato" class="btn primary">Solicitar avaliação</a>
-        </div>
-
-        <div class="about-list">
-          <h3>Especializações</h3>
-          <ul>
-            <li><strong>Juros Abusivos</strong> — taxas muito acima da média de mercado.</li>
-            <li><strong>Capitalização de Juros</strong> — juros sobre juros aplicados incorretamente.</li>
-            <li><strong>Taxas Ilegais</strong> — TAR, TAC e outras cobranças indevidas.</li>
-          </ul>
-
-          <h3 class="mt">Direito Penal</h3>
-          <p>
-            Atuação estratégica em todas as fases do processo: atendimento em delegacias, audiências de custódia e defesa técnica em processos complexos, sempre em defesa das garantias constitucionais.
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <!-- ÁREAS -->
-    <section id="areas" class="section dark">
-      <div class="wrap">
-        <h2 class="section-title">Áreas de Atuação</h2>
-
-        <div class="cards">
-          <article class="card">
-            <h4>Revisão de Contratos Bancários</h4>
-            <p>Identificação de cláusulas abusivas e recuperação de valores indevidos em financiamentos.</p>
-          </article>
-
-          <article class="card">
-            <h4>Financiamentos de Veículos</h4>
-            <p>Análise e atuação em contratos de carros, motos, caminhões e maquinário.</p>
-          </article>
-
-          <article class="card">
-            <h4>Direito Penal</h4>
-            <p>Defesa técnica em todas as fases processuais, com acompanhamento próximo ao cliente.</p>
-          </article>
-        </div>
-      </div>
-    </section>
-
-    <!-- RESULTADOS -->
-    <section id="resultados" class="section">
-      <div class="wrap metrics-wrap">
-        <h2 class="section-title center">Resultados</h2>
-
-        <div class="metrics">
-          <div class="metric glass">
-            <div class="metric-num">800+</div>
-            <div class="metric-label">Processos conduzidos</div>
-          </div>
-
-          <div class="metric glass">
-            <div class="metric-num">10+</div>
-            <div class="metric-label">Anos de atuação</div>
-          </div>
-
-          <div class="metric glass">
-            <div class="metric-num">Redução real</div>
-            <div class="metric-label">Dívidas e devoluções</div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- PROCESSO -->
-    <section class="section dark">
-      <div class="wrap small">
-        <h2 class="section-title center">Como eu trabalho</h2>
-        <ol class="process">
-          <li><strong>Análise detalhada</strong> — exame completo do contrato e extratos.</li>
-          <li><strong>Diagnóstico jurídico</strong> — identificação de cobranças ilegais e abusos.</li>
-          <li><strong>Ação prática</strong> — negociação ou propositura de ação para reduzir dívida e devolver valores.</li>
-        </ol>
-      </div>
-    </section>
-
-    <!-- CONTATO -->
-    <section id="contato" class="section contact">
-      <div class="wrap contact-grid">
-        <div class="contact-card glass">
-          <h2>Contato</h2>
-          <p><strong>Telefone:</strong> (coloque o telefone)</p>
-          <p><strong>E-mail:</strong> <a href="mailto:contato@seuescritorio.com">contato@seuescritorio.com</a></p>
-          <p><strong>Endereço:</strong> (insira o endereço)</p>
-
-          <div class="socials">
-            <a href="#" class="social">WhatsApp</a>
-            <a href="#" class="social">LinkedIn</a>
-          </div>
-        </div>
-
-        <form id="contactForm" class="contact-form glass" novalidate>
-          <label for="name">Nome</label>
-          <input id="name" name="name" type="text" required>
-
-          <label for="email">E-mail</label>
-          <input id="email" name="email" type="email" required>
-
-          <label for="message">Mensagem</label>
-          <textarea id="message" name="message" rows="5" required></textarea>
-
-          <div class="form-actions">
-            <button type="submit" class="btn primary">Enviar</button>
-            <button type="button" id="clearBtn" class="btn ghost">Limpar</button>
-          </div>
-
-          <p class="form-note">Ao enviar, entraremos em contato para agendar uma avaliação sem compromisso.</p>
-        </form>
-      </div>
-    </section>
-  </main>
-
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="wrap foot-inner">
-      <div>© <span id="year"></span> Dr. Silas Santos — OAB/AL 13253</div>
-      <div class="small">Formado pela UFAL • Especialista em Revisão de Contratos Bancários e Direito Penal</div>
+      <ul class="highlights">
+        <li>📊 +1.500 Processos concluídos</li>
+        <li>📂 1.200 Processos ativos</li>
+        <li>🚗 800+ Processos de Revisão Bancária</li>
+      </ul>
     </div>
-  </footer>
 
-  <script src="script.js" defer></script>
+    <div class="hero-right">
+      <div class="portrait">
+        <img src="img/fotosilas1.png" alt="Silas Santos">
+        <div class="portrait-glow"></div>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<!-- SOBRE -->
+<section id="sobre" class="section">
+  <div class="wrap about-grid">
+
+    <div class="glass about-text">
+      <h2>Sobre Mim</h2>
+
+      <p>
+        Meu nome é <strong>Silas Santos</strong> (OAB/AL 13253) e dedico minha vida à advocacia com um
+        propósito inegociável: <strong>garantir que os direitos dos meus clientes sejam respeitados</strong>.
+      </p>
+
+      <p>
+        Formado pela renomada <strong>Universidade Federal de Alagoas (UFAL)</strong>,
+        construí uma carreira sólida, refletida em resultados reais:
+        <strong>mais de 1.500 processos concluídos</strong> e
+        uma carteira atual com <strong>cerca de 1.200 processos ativos</strong>.
+      </p>
+
+      <p>
+        Minha atuação é marcada por combatividade, técnica e estratégia —
+        sempre com foco em resultados.
+      </p>
+    </div>
+
+    <div class="about-list">
+      <h3>Especialização em Revisão Bancária</h3>
+      <p>
+        Tenho mais de <strong>800 processos</strong> exclusivamente na área de
+        <strong>Revisão de Contratos Bancários de Financiamentos de Veículos</strong>.
+      </p>
+
+      <ul>
+        <li><strong>Juros Abusivos</strong> — taxas acima da média de mercado.</li>
+        <li><strong>Capitalização de Juros</strong> — o temido juros sobre juros.</li>
+        <li><strong>Taxas Ilegais</strong> — cobranças indevidas como TAC e tarifas de avaliação.</li>
+      </ul>
+
+      <p>
+        Meu objetivo é claro: reduzir sua dívida, recuperar valores pagos indevidamente
+        e proteger seu patrimônio.
+      </p>
+    </div>
+
+  </div>
+</section>
+
+<!-- ÁREAS DE ATUAÇÃO -->
+<section id="areas" class="section dark">
+  <div class="wrap">
+    <h2 class="section-title center">Áreas de Atuação</h2>
+
+    <div class="cards">
+      <div class="card">
+        <h4>Revisão de Contratos Bancários</h4>
+        <p>Especialização completa em financiamentos de veículos.</p>
+      </div>
+
+      <div class="card">
+        <h4>Direito Penal</h4>
+        <p>Defesa técnica em todas as fases do processo criminal.</p>
+      </div>
+
+      <div class="card">
+        <h4>Direito Civil</h4>
+        <p>Atuação estratégica em demandas patrimoniais e contratuais.</p>
+      </div>
+
+      <div class="card">
+        <h4>Direito Trabalhista</h4>
+        <p>Defesa dos direitos do trabalhador com excelência.</p>
+      </div>
+
+      <div class="card">
+        <h4>Direito Previdenciário</h4>
+        <p>Atuação completa em aposentadorias e benefícios do INSS.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- ESPECIALIZAÇÕES -->
+<section id="especial" class="section">
+  <div class="wrap small">
+    <h2 class="section-title center">Especializações</h2>
+
+    <ol class="process">
+      <li><strong>Juros Abusivos</strong> — redução real da dívida.</li>
+      <li><strong>Capitalização Indevida</strong> — combate ao juros sobre juros.</li>
+      <li><strong>Taxas Ilegais</strong> — recuperação do que foi cobrado a mais.</li>
+      <li><strong>Defesa Penal Estratégica</strong> em todas as etapas.</li>
+    </ol>
+  </div>
+</section>
+
+<!-- CONTATO -->
+<section id="contato" class="section contact dark">
+  <div class="wrap contact-grid">
+
+    <div class="contact-card glass">
+      <h2>Contato</h2>
+      <p><strong>Telefone:</strong> (inserir número)</p>
+      <p><strong>E-mail:</strong> contato@seuescritorio.com</p>
+      <p><strong>Endereço:</strong> (inserir endereço)</p>
+    </div>
+
+    <form id="contactForm" class="contact-form glass">
+      <label for="name">Nome</label>
+      <input type="text" id="name" required>
+
+      <label for="email">E-mail</label>
+      <input type="email" id="email" required>
+
+      <label for="message">Mensagem</label>
+      <textarea id="message" rows="5" required></textarea>
+
+      <div class="form-actions">
+        <button type="submit" class="btn primary">Enviar</button>
+        <button type="button" id="clearBtn" class="btn ghost">Limpar</button>
+      </div>
+    </form>
+
+  </div>
+</section>
+
+<footer class="footer">
+  <div class="wrap foot-inner">
+    © <span id="year"></span> Dr. Silas Santos — Todos os direitos reservados.
+  </div>
+</footer>
+
+<script src="script.js" defer></script>
 </body>
 </html>
